--- a/pom.xml
+++ b/pom.xml
@@ -34,4 +34,18 @@
         </plugins>
     </build>
 
+    <repositories>
+        <repository>
+            <id>myMavenRepo.read</id>
+            <url>https://mymavenrepo.com/repo/oXIysgXhTKj8TGd9Iiqa/</url>
+        </repository>
+    </repositories>
+
+    <distributionManagement>
+        <repository>
+            <id>myMavenRepo.write</id>
+            <url>https://mymavenrepo.com/repo/yuKpiCeuFPhgcB6173Te/</url>
+        </repository>
+    </distributionManagement>
+
 </project>
